--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <title>Дипломный проект | Воропаев.М.Д</title>
     <!-- meta -->
     <meta charset="UTF-8">
-    <meta name="robots" content="none"/>
+    <meta name="robots" content="none">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=320, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
@@ -29,6 +28,7 @@
     <script src="script/jquery-3.4.1.min.js"></script>
     <script src="script/popup-script.js"></script>
     <script src="script/common.js"></script>
+    <script src="script/jquery.maskedinput.min.js"></script>
     <script src="slick/slick.min.js"></script>
 </head>
 
@@ -54,9 +54,9 @@
                             </div>
                             <div class="form-box">
                                 <label for="form-phone-one" class="form-label">Телефон:</label>
-                                <input type="tel" class="setting-form" id="form-phone-one" name="tel"
-                                    data-mask="+7(000)000-0000" placeholder="+7(000)000-0000" required=""
-                                    autocomplete="off" maxlength="15" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+                                <input type="tel" class="setting-form" id="form-phone-one" name="phone"
+                                    placeholder="+7(000)000-0000" required=""
+                                    autocomplete="off" maxlength="15">
                             </div>
                             <div class="btm-form-setting">
                                 <button class="popupItem__btn button request-a-call-custom popup-btm-form btm-form-setting form-label"
@@ -87,9 +87,9 @@
                             </div>
                             <div class="form-box">
                                 <label for="form-phone-two" class="form-label">Телефон:</label>
-                                <input type="tel" class="setting-form" id="form-phone-two" name="tel"
-                                    data-mask="+7(000)000-0000" placeholder="+7(000)000-0000" required=""
-                                    autocomplete="off" maxlength="15" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+                                <input type="tel" class="setting-form" id="form-phone-two" name="phone"
+                                    placeholder="+7(000)000-0000" required=""
+                                    autocomplete="off" maxlength="15">
                             </div>
                             <div class="form-box">
                                 <label for="custom-select" class="form-label">Хочу узнать стоимость&nbsp;на:</label>
@@ -134,9 +134,9 @@
                             </div>
                             <div class="form-box">
                                 <label for="form-phone-three" class="form-label">Телефон:</label>
-                                <input type="tel" class="setting-form" id="form-phone-three" name="tel"
-                                    data-mask="+7(000)000-0000" placeholder="+7(000)000-0000" required=""
-                                    autocomplete="off" maxlength="15" pattern="^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{7,10}$">
+                                <input type="tel" class="setting-form" id="form-phone-three" name="phone"
+                                    placeholder="+7(000)000-0000" required=""
+                                    autocomplete="off" maxlength="15">
                             </div>
                             <div class="form-box">
                                 <label for="form-textarea" class="form-label">Ваше сообщение:</label><br>
@@ -411,6 +411,7 @@
                 <div class="row">
                     <div class="col-footer col-ft-one">
                         <div class="row row_ft">
+                            <h6 class="visually-hidden">Данный сайт является портфолио</h6>
                             <a href="#one" class="nav-footer" title="Услуги">Услуги</a>
                         </div>
                         <div class="row row_ft">
@@ -463,6 +464,7 @@
         <section class="copyright-footer-bottom">
             <div class="container copyright-box">
                 <div class="row">
+                    <h6 class="visually-hidden">Данный сайт является портфолио</h6>
                     <small class="col copyright-text">&copy;&nbsp;Дмитрий Алексеев, 2016&nbsp;&mdash; 2018</small>
                 </div>
             </div>
